--- a/css/p4.html
+++ b/css/p4.html
@@ -12,12 +12,13 @@
                 background-color: tomato;
                 color: white;
                 border: 1px solid white;
-                flex-basis: 100px;
+                flex-basis: 10px;
                 /* flex-grow: 1; */
+                flex-wrap: wrap-reverse;
             }
             .item:nth-child(2){
-                flex-basis: 300px;
-                flex-shrink: 0;
+                flex-basis: 30px;
+                /* flex-shrink: 0; */
                 /* flex-grow: 2; */
             }
         </style>
