--- a/css/g2.html
+++ b/css/g2.html
@@ -2,10 +2,18 @@
 <html>
     <head>
         <style>
-
+            h1{
+                background-color: deepskyblue;
+                color:white;
+                display: inline-block;
+                padding: 5px;
+                font-size: 3rem;
+                margin: 100px;
+                transform: scale(2, 2);
+            }
         </style>
     </head>
     <body>
-        
+        <h1>Hello Transform</h1>
     </body>
 </html>
