--- a/js/2.html
+++ b/js/2.html
@@ -5,6 +5,15 @@
 <body>
     <script>
         console.log(location.toString(), location.href);
+        console.log(location.protocol);
+        console.log(location.host);
+        console.log(location.port);
+        console.log(location.host);
+
+        console.dir(navigator);
+        console.log(navigator);
+        console.log(navigator.appVersion);
+        console.log(navigator.userAgent);
     </script>
 </body>
 </html>
