--- a/js/6.html
+++ b/js/6.html
@@ -9,6 +9,18 @@
             <li>2</li>
             <li>3</li>
         </ul>
+        <ul>
+            <li class="act">1</li>
+            <li>2</li>
+            <li class="act">3</li>
+        </ul>
+        <ul>
+            <li id="act">1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
         <input type="button" value="run" onclick="$('li').css('color', 'red');">
+        <input type="button" value="run" onclick="$('.act').css('color', 'blue');">
+        <input type="button" value="run" onclick="$('#act').css('color', 'blue');">
     </body>    
 </html>
