--- a/js/7.html
+++ b/js/7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
     </head>
     <body>
         <ul>
