--- a/js/10.html
+++ b/js/10.html
@@ -7,28 +7,29 @@
         <ul>
             <li class="marked">HTML</li>
             <li>CSS</li>
-            <li id="active">JS</li>
-            <ul>
-                <li>HTLM</li>
-                <li class="marked">CSS</li>
-                <li class="marked">JS</li>
-            </ul>
+            <li id="active">JS
+                <ul>
+                    <li>JS Core</li>
+                    <li class="marked">DOM</li>
+                    <li class="marked">BOM</li>
+                </ul>
+            </li>
         </ul>
-    </body>
     <script>
         let list = document.getElementsByClassName('marked');
         console.group('documnet');
         for(let i = 0; i < list.length; i++){
             console.log(list[i].textContent);
         }
-        console.gourpEnd();
+        console.groupEnd();
 
         console.group('active');
         let active = document.getElementById('active');
         let list2 = active.getElementsByClassName('marked');
         for(let i = 0; i < list2.length; i++){
-            console.log(list[i].textContent);
+            console.log(list2[i].textContent);
         }
         console.groupEnd();
     </script>
+    </body>
 </html>
