--- a/js/12_node.html
+++ b/js/12_node.html
@@ -21,7 +21,7 @@
             let ul = s.firstChild.nextSibling;
             console.log(2, ul);
             console.log(3, ul.nextSibling);
-            console.log(4, ul.nextSibling.extSibling);
+            console.log(4, ul.nextSibling.nextSibling);
             console.log(5, ul.childNodes);
             console.log(6, ul.childNodes[1]);
             console.log(7, ul.parentNode);
